# ir-switcher

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.in
images/: Makefile.am  Makefile.in
servers/: IR_Switcher.server  IR_Switcher.server.in  Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  ir_switcher.py  ir_switcher_globals.py.in
